--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     <script>
 
         document.addEventListener('DOMContentLoaded', () => {
-            const DATA_URL = 'https://raw.githubusercontent.com/Mai19930513/SamsungTestFirmwareVersionDecrypt/refs/heads/master/firmware.json';
+            const DATA_URL = 'https://cdn.jsdelivr.net/gh/Mai19930513/SamsungTestFirmwareVersionDecrypt/firmware.json';
             class FirmwareTable {
                 constructor() {
                     this.tableBody = document.querySelector('#firmwareTable tbody');
