--- a/index.html
+++ b/index.html
@@ -335,9 +335,9 @@
         }
 
         .android_os {
-            font-size: 0.8rem;
+            font-size: 0.7rem;
             /* 字体稍小 */
-            color: #6c757d;
+            color: #4a90e2;
             /* 使用灰色 */
             margin-top: 0.3rem;
             /* 与上方内容保持间距 */
@@ -345,12 +345,13 @@
             /* 独占一行 */
             font-weight: bold;
             /* 加粗字体 */
-            padding: 0.2rem 0.5rem;
+            padding: 0.1rem 0.4rem;
             /* 内边距 */
-            border-radius: 4px;
+            border-radius: 20px;
             /* 圆角边框 */
             text-align: center;
             /* 居中对齐 */
+            border: 0.5px SOLID
         }
     </style>
 </head>
@@ -507,12 +508,12 @@
             <td>${item.regionName}</td>
             <td title="${item.official_full || '无版本号'}">
                 ${item.official ? `<a href="https://samfw.com/firmware/${item.model}/${item.regionCode}/${item.official}" target="_blank" class="version-badge official-badge">${item.official}</a>` : '-'}
-            <div class="android_os">OS:${item.stableOS || '未知'}</div>
+            <div class="android_os">Android:${item.stableOS || '未知'}</div>
                 </td>
             <td title="${item.beta_full || '无版本号'}" class="copyable">
                 ${item.beta ? `<span class="version-badge beta-badge">${item.beta}</span>` : '-'}
             
-            <div class="android_os">OS:${item.devOS || '未知'}</div>
+            <div class="android_os">Android:${item.devOS || '未知'}</div>
             </td>
             <td>${item.updateTime || '未知'}</td>
             <td>${item.description}</td>
