--- a/index.html
+++ b/index.html
@@ -404,7 +404,8 @@
 
         document.addEventListener('DOMContentLoaded', () => {
             // const DATA_URL = 'https://raw.githubusercontent.com/Mai19930513/SamsungTestFirmwareVersionDecrypt/refs/heads/master/firmware.json';
-            const DATA_URL = 'https://ghfast.top/https://raw.githubusercontent.com/Mai19930513/SamsungTestFirmwareVersionDecrypt/refs/heads/master/firmware_mini.json';
+            // const DATA_URL = 'https://ghfast.top/https://raw.githubusercontent.com/Mai19930513/SamsungTestFirmwareVersionDecrypt/refs/heads/master/firmware_mini.json';
+            const DATA_URL ='https://cdn.jsdelivr.net/gh/Mai19930513/SamsungTestFirmwareVersionDecrypt/firmware_mini.json';
             class FirmwareTable {
                 constructor() {
                     this.tableBody = document.querySelector('#firmwareTable tbody');
