--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             // const DATA_URL = 'https://raw.githubusercontent.com/Mai19930513/SamsungTestFirmwareVersionDecrypt/refs/heads/master/firmware.json';
             // const DATA_URL = 'https://ghfast.top/https://raw.githubusercontent.com/Mai19930513/SamsungTestFirmwareVersionDecrypt/refs/heads/master/firmware_mini.json';
             const timestamp = Date.now()
-            const DATA_URL ='https://cdn.jsdelivr.net/gh/Mai19930513/SamsungTestFirmwareVersionDecrypt/firmware_mini.json?v=${timestamp}';
+            const DATA_URL =`https://cdn.jsdelivr.net/gh/Mai19930513/SamsungTestFirmwareVersionDecrypt/firmware_mini.json?v=${timestamp}`;
             class FirmwareTable {
                 constructor() {
                     this.tableBody = document.querySelector('#firmwareTable tbody');
