--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
                             </div>
                             <div class="android_os" style="margin-bottom:0.2em;">Android OS:${item.stableOS || '未知'}</div>
                         </td>
-                        <td style="min-width:180px; vertical-align:middle;" title="${item.beta_full || '无版本号'}" class="copyable">
+                        <td style="min-width:180px; vertical-align:middle;;text-align:left" title="${item.beta_full || '无版本号'}" class="copyable">
                             <div>
                                 <span style="font-weight:bold;color:#4a90e2;display:inline-block;text-align:right;">日常更新(OS:${item.stableOS || '未知'})：</span>
                                 ${item.minor ? `<span class="version-badge beta-badge copyable" title="${item.minor_full || '无版本号'}">${item.minor}</span>` : '-'}
