--- a/index.html
+++ b/index.html
@@ -636,11 +636,11 @@
                         </td>
                         <td style="min-width:180px; vertical-align:middle;text-align:left" title="${item.beta_full || '无版本号'}" class="copyable">
                             <div>
-                                <span style="font-weight:bold;color:#4a90e2;display:inline-block;text-align:right;">日常更新(OS:${item.stableOS || '未知'})：</span>
+                                <span style="font-weight:bold;color:#4a90e2;display:inline-block;text-align:right;">日常更新：</span>
                                 ${item.minor ? `<span class="version-badge beta-badge copyable" title="${item.minor_full || '无版本号'}">${item.minor}</span>` : '-'}
                             </div>
                             <div>
-                                <span style="font-weight:bold;color:#6c5ce7;display:inline-block;text-align:right;">下个版本(OS:${item.devOS || '未知'})：</span>
+                                <span style="font-weight:bold;color:#6c5ce7;display:inline-block;text-align:right;">下个版本：</span>
                                 ${item.major ? `<span class="version-badge beta-badge copyable" title="${item.major_full || '无版本号'}">${item.major}</span>` : '-'}
                             </div>
                         </td>
